--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -25,7 +25,7 @@ const {
 } = Astro.props as SidebarProps;
 ---
 <aside class="hidden bg-[var(--surface-sidebar)] border-r border-[var(--border-sidebar)] px-6 py-7 w-72 flex-col gap-6 lg:flex">
-  <div class="mx-auto h-28 w-28 overflow-hidden rounded-full border-4 border-[var(--border-avatar)] shadow-[0_6px_16px_var(--shadow-panel)]">
+  <div class="mx-auto h-28 w-28 overflow-hidden rounded-full border-4 border-[var(--border-avatar)] shadow-[var(--shadow-surface)]">
     <img src={`${import.meta.env.BASE_URL}assets/img/amarantha-avatar.jpg`} alt="Portrait of amarantha with her dog" class="h-full w-full object-cover" />
   </div>
   <nav class="flex flex-col gap-6">
