--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -46,5 +46,10 @@ const ogImage = siteRoot ? `${siteRoot}${ogImagePath}` : ogImagePath;
       </div>
       <Footer />
     </div>
+    <script
+      data-goatcounter="https://amarranta.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
