--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -28,7 +28,7 @@ const gridId = `tag-grid-${tag.slug}`;
 ---
 <BaseLayout title={`${tag.label} • ${site.title}`} description={`Tag ${tag.label} on ${site.title}`}>
   <div class="flex min-h-screen flex-col lg:flex-row">
-    <Sidebar albums={albums} tags={tags} activeTag={tag.slug} />
+    <Sidebar albums={albums} tags={tags} activeTag={tag.slug} activeCollection="folders" />
     <main class="flex flex-1 flex-col overflow-hidden">
     <ProfileHero {...hero} />
   <ViewHeader title={tag.label} subtitle={subtitle} backHref={import.meta.env.BASE_URL} backLabel="Back to all folders" />
