--- a/src/pages/album/[album].astro
+++ b/src/pages/album/[album].astro
@@ -28,7 +28,7 @@ const gridId = `album-grid-${album.slug}`;
 ---
 <BaseLayout title={`${album.name} • ${site.title}`} description={`Album ${album.name} from ${site.title}`}>
   <div class="flex min-h-screen flex-col lg:flex-row">
-    <Sidebar albums={albums} tags={tags} activeAlbum={album.slug} />
+    <Sidebar albums={albums} tags={tags} activeAlbum={album.slug} activeCollection="folders" />
     <main class="flex flex-1 flex-col overflow-hidden">
     <ProfileHero {...hero} />
   <ViewHeader title={album.name} subtitle={subtitle} backHref={import.meta.env.BASE_URL} backLabel="Back to all folders" />
